--- a/index.html
+++ b/index.html
@@ -8,39 +8,65 @@
     <title>Vite App</title>
   </head>
   <body>
-    <header class="bg-[url(/src/images/24_banner-bg.jpg.jpeg)] bg-center bg-cover h-[100vh] py-8 text-white">
-      <nav class="g-[#0071f8] sticky flex justify-between items-center  mb-24 px-[125px]">
-        <img src="./src/images/07_logo.png" alt="" class="aspect-auto w-[150px]">
-        <div class="flex gap-5 items-center">
-          <ul class="flex gap-12">
-            <li class="px-3 py-6 font-extralight rounded-2xl">Home</li>
-            <li class="px-3 py-6 rounded-2xl">Our Shop</li>
-            <li class="px-3 py-6 rounded-2xl">Product Details</li>
-            <li class="px-3 py-6 rounded-2xl">Contact Us</li>
-          </ul>
-          <button class="bg-[#ee626b] rounded-3xl py-2 px-4">SIGN IN</button>
-        </div>
-      </nav>
-      <main class="grid grid-cols-10 gap-4 justify-between items-center px-[125px]">
-        <div class="md:col-span-6 bg-amber-0 p-2">
-          <h6 class="text-xl pb-8">WELCOME TO LUGX</h6>
-          <h2 class="text-5xl font-bold">BEST <span class="border-b-amber-500 border-b-2">GAMING</span> SITE EVER!</h2>
-          <p class=" my-13 w-[600px] text-[.9rem]">LUGX Gaming is free Bootstrap 5 HTML CSS website template for your gaming websites. You can download and use this layout
-          for commercial purposes. Please tell your friends about TemplateMo.</p>
-          <div class="bg-white rounded-4xl w-fit">
-            <input type="text" placeholder="Type Samething" class="text-black border-none px-4 py-3">
-            <button class="bg-[#ee626b] rounded-3xl py-3 px-4">SEARCH NOW</button>
+    <section class="grid h-fit relative">
+      <header class="bg-[url(/src/images/24_banner-bg.jpg.jpeg)] bg-center bg-cover h-fit py-8 text-white rounded-b-[12rem]">
+        <nav class="flex justify-between items-center mb-24 max-md:px-5 md:px-[125px] w-full">
+          <img src="./src/images/07_logo.png" alt="" class="aspect-auto w-[150px]">
+          <div class="flex gap-5 items-center">
+            <ul class="flex gap-12">
+              <li class="px-3 py-6 font-extralight rounded-2xl">Home</li>
+              <li class="px-3 py-6 rounded-2xl">Our Shop</li>
+              <li class="px-3 py-6 rounded-2xl">Product Details</li>
+              <li class="px-3 py-6 rounded-2xl">Contact Us</li>
+            </ul>
+            <button class="bg-[#ee626b] rounded-3xl py-2 px-4">SIGN IN</button>
           </div>
-        </div>
-        <div class="md:col-span-4 bg-amber-6 h-fit">
-          <div class="h-[400px] w-[400px] relative">
-            <img src="/src/images/02_banner-image.jpeg" alt="" class="aspect-[12/16] rounded-2xl">
-            <h1 class="py-2 px-5 rounded-2xl right-13 top-8 bg-[#008af8] absolute">$22</h1>
+        </nav>
+        <main class="pb-46 pt-10 grid lg:grid-cols-[repeat(10,minmax(0px,1fr))] gap-8 justify-between items-center max-md:px-5 md:px-[125px]">
+          <div class="lg:col-span-6 p-2">
+            <h6 class="text-xl font-semibold pb-4">WELCOME TO LUGX</h6>
+            <div class="flex flex-col">
+              <h2 class="text-[2.9rem] font-bold">BEST GAMING SITE EVER!</h2>
+              <img src="/src/images/19_caption-dec.png" alt="" class="w-54">
+            </div>
+            <p class="my-10 w-full text-[1.1rem]">LUGX Gaming is free Bootstrap 5 HTML CSS website template for your gaming websites. You can download and use this layout
+              for commercial purposes. Please tell your friends about TemplateMo.</p>
+            <div class="bg-white rounded-4xl w-fit flex">
+              <input type="text" placeholder="Type Samething" class="text-black border-none px-8 pr-auto py-3">
+              <button class="bg-[#ee626b] rounded-3xl py-3 px-4">SEARCH NOW</button>
+            </div>
           </div>
-          <h1 class="w-20 h-20 flex justify-center items-center bg-[#ee626b] rounded-full absolute bottom-0">- 40%</h1>
-        </div>
-      </main>
-    </header>
+          <div class="h-[105%] lg:col-span-4 bg-amber-60 flex flex-col justify-start items-end relative">
+            <div class="bg-amber-20">
+              <img src="/src/images/02_banner-image.jpeg" alt="" class=" w-full rounded-2xl">
+              <h1 class="py-2 px-5 rounded-4xl right-5 top-8 bg-[#008af8] font-bold text-[1.3rem] absolute">$22</h1>
+            </div>
+            <h1 class="aspect-square p-4 flex justify-center items-center bg-[#ee626b] rounded-full font-bold text-3xl z-10 absolute left-0 bottom-0">- 40%</h1>
+          </div>
+        </main>
+      </header>
+      <main id="user-views" class="grid grid-cols-[repeat(auto-fit,minmax(280px,1fr))] gap-8 w-full max-md:px-5 md:px-[125px] mb-8 absolut bottom-0"></main>
+    </section>
+    <main class="max-md:px-5 md:px-[125px] space-y-20 pb-36">
+      <div class="flex justify-between items-end pb-16">
+        <aside class="space-y-5">
+          <h3 class="text-[#ee626b] font-bold">TRENDING</h3>
+          <h1 class="text-4xl font-bold">Trending Games</h1>
+        </aside>
+        <button class="bg-[#ee626b] rounded-3xl py-3 px-4 text-white">VIEW ALL</button>
+      </div>
+      <section id="trending-games" class="gap-5 grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))]"></section>
+    </main>
+    <section class="max-md:px-5 md:px-[125px] bg-[#f7f7f7] py-22 rounded-[12rem]">
+      <div class="flex justify-between items-end">
+        <aside class="space-y-5">
+          <h3 class="text-[#ee626b] font-bold">TOP GAMES</h3>
+          <h1 class="text-4xl font-bold">Most Played</h1>
+        </aside>
+        <button class="bg-[#ee626b] rounded-3xl py-3 px-4 text-white">VIEW ALL</button>
+      </div>
+      <main id="top-games" class="gap-5 grid grid-cols-[repeat(auto-fit,minmax(150px,1fr))]"></main>
+    </section>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
